src/es/components/molecules/simpleForm/default-/default-.css
:host {
    --simple-form-default-border-radius: var(--simple-form-default-border-radius-custom, var(--border-radius, 0.5em));
}
:host #response {
    color: var(--color-error, var(--color-secondary, red));
}
:host #response.success {
    color: var(--color-success, var(--color-secondary, green));
}
:host #response[onclick] {
    cursor: pointer;
}
:host > form > div.inline {
    align-items: center;
    display: flex;
    gap: 1em;
    justify-content: flex-start;
}
:host > form > div.inline > label {
    text-align: justify;
}
:host > form > div.inline > input, :host > form > div.inline > select {
    flex-shrink: 0;
}
:host input, :host select, :host div {
    transition: border-color 0.3s ease-out, outline 0.3s ease-out;
}
:host([dirty]) input:not(:valid), :host([dirty]) div:has(input[type=file]:not(:valid)), :host([dirty]) select:not(:valid) {
    border-color: var(--color-error, var(--color-secondary, red));
}
:host([dirty]) input[type=checkbox]:not(:valid) {
    border-radius: var(--simple-form-default-border-radius-custom, var(--border-radius, 0.5em));
    outline-color: var(--color-error, var(--color-secondary, red));
    outline-style: var(--outline-style, solid);
    outline-width: var(--outline-width, 0.125em);
    outline-offset: var(--outline-offset, 1px);
}
:host input + label::after, :host label:has(+ input)::after, :host select + label::after, :host label:has(+ select)::after, :host input[type=file] + div::after, :host div:has(+ input[type=file])::after {
    color: var(--color-error, var(--color-secondary, red));
    content: attr(validation-message);
    float: right;
    font-size: 0.875em;
    opacity: 0;
    padding: 0 0.625em;
    text-decoration: underline;
    transition: opacity 0.3s ease-out;
}
:host input[type=file] + div::after, :host div:has(+ input[type=file])::after {
    display: none;
    transition: display 0.3s ease-out;
}
:host([dirty]) input[type=checkbox] + label::after, :host([dirty]) label:has(+ input[type=checkbox])::after {
    padding: 0 0 0 0.625em;
}
:host([dirty]) input:not(:valid) + label::after, :host([dirty]) label:has(+ input:not(:valid))::after, :host([dirty]) select:not(:valid) + label::after, :host([dirty]) label:has(+ select:not(:valid))::after, :host([dirty]) input[type=file]:not(:valid) + div::after, :host([dirty]) div:has(+ input[type=file]:not(:valid))::after {
    display: inline-block;
    opacity: 1;
}

